# icreditchain

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  P0_BUILD_LOG.md  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  devex_rfc.md
.github/actions/buildx-setup/: action.yml
.github/actions/check-creditchain/: action.yaml
.github/actions/docker-setup/: action.yaml
.github/actions/fullnode-sync/: fullnode_sync.py
.github/actions/get-latest-cli/: action.yaml
.github/actions/move-prover-setup/: action.yaml
.github/actions/run-faucet-tests/: action.yaml
.github/actions/run-rust-client-tests/: action.yaml
.github/actions/rust-check-merge-base/: action.yaml
.github/actions/rust-unit-tests/: action.yaml
.github/actions/test-target-determinator/: action.yaml
.github/ts-tasks/: prune-github-workflow-runs.ts
.github/workflows/: adhoc-forge.yaml  bump-release-version.yaml  cargo-metadata-upload.yaml  cc-node-release.yaml  cli-e2e-tests.yaml  cli-external-deps.yaml  cli-release.yaml  copy-images-to-dockerhub-nightly.yaml  copy-images-to-dockerhub.yaml  coverage-move-only.yaml  coverage.yaml  docker-build-rosetta.yaml  docker-build-test.yaml  docker-indexer-grpc-test.yaml  docker-update-images.yaml  faucet-tests-main.yaml  faucet-tests-prod.yaml  find-packages-with-undeclared-feature-dependencies.yaml  forge-continuous-land-blocking-test.yaml  forge-stable.yaml  forge-unstable.yaml  fullnode-execute-devnet-main.yaml  fullnode-execute-devnet-stable.yaml  fullnode-fast-devnet-main.yaml  fullnode-fast-devnet-stable.yaml  fullnode-fast-mainnet-main.yaml  fullnode-fast-mainnet-stable.yaml  fullnode-fast-testnet-main.yaml  fullnode-fast-testnet-stable.yaml  fullnode-intelligent-devnet-main.yaml  fullnode-intelligent-mainnet-main.yaml  fullnode-intelligent-mainnet-stable.yaml  fullnode-intelligent-testnet-main.yaml  fuzzer-data-update.yml  indexer-grpc-in-memory-cache-benchmark.yaml  indexer-processor-testing.yaml  indexer-protos-sdk-update.yaml  links.yml  module-verify.yaml  node-api-compatibility-tests.yaml  (+12 more)
api/doc/: spec.html
api/src/: bcs_payload.rs  response.rs  runtime.rs  transactions.rs
api/test-context/src/: test_context.rs
api/types/src/: derives.rs
consensus/src/twins/: basic_twins_test.rs
crates/channel/src/: message_queues.rs
crates/crash-handler/src/: lib.rs
crates/creditchain/: CHANGELOG.md  README.md
crates/creditchain-dkg/benches/: weighted_vuf.rs
crates/creditchain-faucet/doc/: spec.html
crates/creditchain-faucet/integration-tests/: main.py
crates/creditchain-rest-client/src/: lib.rs
crates/creditchain/e2e/: main.py
crates/creditchain/homebrew/: README.md
crates/creditchain/src/genesis/: git.rs
crates/creditchain/src/move_tool/: mod.rs
creditchain-move/creditchain-gas-profiling/templates/: index.html
creditchain-move/creditchain-memory-usage-tracker/src/: lib.rs
creditchain-move/creditchain-release-builder/src/: validate.rs
creditchain-move/creditchain-sdk-builder/: README.md
creditchain-move/framework/: FRAMEWORK-PROVER-GUIDE.md  README-MIRROR-REPO.md  README.md
creditchain-move/framework/tests/: move_prover_tests.rs  move_unit_test.rs
creditchain-move/move-examples/: README.md
creditchain-move/move-examples/bonding_curve_launchpad/: README.md
creditchain-move/move-examples/move-tutorial/: README.md
creditchain-move/replay-benchmark/: README.md
deploy/private/: .env.consortium  README.md  docker-compose.yaml
deploy/private/configs/: validator-0.yaml  validator-1.yaml  validator-2.yaml
deploy/private/scripts/: deploy.sh  init-genesis.sh
devtools/creditchain-cargo-cli/src/: common.rs
docker/: release-images.mjs
docker/builder/: README.md  builder.Dockerfile  docker-bake-rust-all.hcl  faucet.Dockerfile  forge.Dockerfile  indexer-grpc.Dockerfile  keyless-pepper-service.Dockerfile  nft-metadata-crawler.Dockerfile  node-checker.Dockerfile  telemetry-service.Dockerfile  tools.Dockerfile  validator-testing.Dockerfile  validator.Dockerfile
docker/compose/: README.md
docker/compose/creditchain-node/: README.md  docker-compose-src.yaml
docker/compose/validator-testnet/: docker-compose.yaml
docker/compose/validator-testnet-3node/: README.md  docker-compose.yaml  join-independent-validator.sh  prepare-independent-validator.sh  validator-0.yaml  validator-1.yaml  validator-2.yaml
docker/rosetta/: README.md  rosetta.Dockerfile
docs/: 01_CREDITCHAIN_ARCHITECTURE.md
ecosystem/indexer-processor-sdk/src/: server_framework.rs
experimental/bulk-txn-submit/: README
network/framework/: Cargo.toml
network/framework/src/peer_manager/: mod.rs
network/framework/src/protocols/rpc/: mod.rs
network/framework/src/protocols/wire/handshake/v1/: mod.rs
network/framework/src/protocols/wire/messaging/v1/: mod.rs
network/framework/src/transport/: mod.rs
sdk/src/: types.rs
state-sync/creditchain-data-client/: Cargo.toml
terraform/aptos-node-testnet/aws/: variables.tf
terraform/aptos-node-testnet/gcp/: variables.tf
terraform/aptos-node/aws/: variables.tf
terraform/aptos-node/azure/: variables.tf
terraform/aptos-node/gcp/: variables.tf
terraform/fullnode/aws/: variables.tf
terraform/fullnode/digital_ocean/: variables.tf
terraform/fullnode/gcp/: terraform.tfvars  variables.tf
terraform/fullnode/vultr/: variables.tf
terraform/helm/aptos-node/: Chart.yaml  README.md  values.yaml
terraform/helm/fullnode/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
terraform/helm/genesis/: Chart.yaml  README.md  values.yaml
terraform/helm/testnet-addons/: Chart.yaml  README.md
terraform/helm/vector-log-agent/: README.md.gotmpl
testsuite/: exp  forge.py  forge_test.py  indexer_grpc_local.py  single_node_performance.py  testrun
testsuite/loadtest-k6/src/: indexer-grpc-test.ts
testsuite/replay-verify/: main.py
testsuite/smoke-test/src/: network.rs  upgrade_multi_step_test_metadata.txt
testsuite/test_framework/: git.py
testsuite/testcases/src/: reconfiguration_test.rs
types/src/: account_address.rs
types/src/keyless/: circuit_testcases.rs
(+218 files in other folders)
